Updated the dashboard fragment

--- a/app/src/main/res/layout/fragment_business_dashboard.xml
+++ b/app/src/main/res/layout/fragment_business_dashboard.xml
@@ -315,8 +315,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:layout_marginTop="@dimen/_14sdp"
+                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:background="@color/viewcolor" />
 
                             <LinearLayout
@@ -431,8 +431,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:layout_marginTop="@dimen/_14sdp"
+                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:background="@color/viewcolor" />
 
                             <LinearLayout
@@ -782,8 +782,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:layout_marginTop="@dimen/_18sdp"
+                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:background="@color/viewcolor" />
 
                             <TextView
@@ -836,8 +836,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:layout_marginTop="@dimen/_14sdp"
+                                android:layout_marginHorizontal="@dimen/_10sdp"
                                 android:background="@color/viewcolor" />
 
                             <LinearLayout
@@ -1116,8 +1116,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:background="@color/blue_light" />
 
                             <LinearLayout
@@ -1165,16 +1165,16 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:background="@color/blue_light" />
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginHorizontal="@dimen/_11sdp"
-                                android:layout_marginTop="@dimen/_7sdp"
                                 android:layout_weight="1"
+                                android:layout_marginTop="@dimen/_7sdp"
                                 android:orientation="horizontal">
 
                                 <TextView
@@ -1197,8 +1197,8 @@
                                 <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
                                     android:gravity="right"
+                                    android:layout_weight="1"
                                     android:orientation="horizontal">
 
                                     <TextView
@@ -1222,8 +1222,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:background="@color/blue_light" />
 
                             <LinearLayout
@@ -1269,8 +1269,8 @@
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
-                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:layout_marginTop="@dimen/_7sdp"
+                                android:layout_marginHorizontal="@dimen/_11sdp"
                                 android:background="@color/blue_light" />
 
                             <LinearLayout
@@ -1291,8 +1291,8 @@
                                 <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_weight="1"
                                     android:gravity="right"
+                                    android:layout_weight="1"
                                     android:orientation="horizontal">
 
                                     <TextView
@@ -1914,8 +1914,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/_20sdp"
+                                android:background="@color/white"
                                 android:contentDescription="@string/additional_action_required"
-                                android:src="@drawable/ic_additional_action_required" />
+                                android:src="@drawable/additional_action_required" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -1931,9 +1932,10 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/_20sdp"
-                                android:layout_marginBottom="@dimen/_30sdp"
+                                android:layout_marginTop="@dimen/_10sdp"
+                                android:layout_marginBottom="@dimen/_10sdp"
                                 android:fontFamily="@font/opensans_regular"
+                                android:padding="@dimen/_10sdp"
                                 android:text="@string/additional_data_message"
                                 android:textAlignment="center"
                                 android:textColor="@color/primary_black"
@@ -1942,9 +1944,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginStart="@dimen/_15sdp"
-                                android:layout_marginEnd="@dimen/_7sdp"
-                                android:layout_marginBottom="@dimen/_10sdp"
+                                android:layout_margin="@dimen/_10sdp"
                                 android:orientation="vertical">
 
                                 <androidx.cardview.widget.CardView
