--- a/app/src/main/res/layout/activity_review_application.xml
+++ b/app/src/main/res/layout/activity_review_application.xml
@@ -595,7 +595,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/_7sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="Http://"
+                            android:text="https://"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
