--- a/app/src/main/res/layout/activity_business_additional_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additional_action_required.xml
@@ -13,7 +13,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="@dimen/_110sdp"
+            android:layout_marginBottom="@dimen/_100sdp"
             android:scrollbars="none"
             tools:ignore="UselessParent">
 
@@ -163,7 +163,9 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginEnd="@dimen/_10sdp"
                                 android:gravity="right"
-                                android:src="@drawable/ic_complete" />
+                                android:src="@drawable/ic_complete"
+
+                                />
 
                         </LinearLayout>
 
@@ -307,7 +309,6 @@
                                 android:orientation="vertical">
 
                                 <TextView
-                                    android:id="@+id/licenseUploadedTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginBottom="@dimen/_1sdp"
@@ -516,6 +517,7 @@
                     <androidx.cardview.widget.CardView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/_15sdp"
                         app:cardCornerRadius="@dimen/_6sdp">
 
                         <LinearLayout
@@ -598,7 +600,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginBottom="@dimen/_8sdp"
+                                    android:layout_marginBottom="@dimen/_10sdp"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:text="@string/prestige_worldwide"
                                     android:textColor="@color/dark_grey"
@@ -777,7 +779,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_22sdp"
-                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_32sdp"
                 android:layout_marginEnd="@dimen/_22sdp"
                 android:layout_marginBottom="@dimen/_6sdp"
                 app:cardBackgroundColor="@color/inactive_color"
