--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -160,19 +160,16 @@
                 android:id="@+id/profileLL"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/profileviewLL"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:background="@color/white"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:visibility="gone">
+                android:visibility="gone"
+                android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/profile_account_profile_image"
                     android:layout_width="@dimen/_35sdp"
                     android:layout_height="@dimen/_35sdp"
-                    android:layout_alignParentRight="true"
-                    android:layout_gravity="center"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/_12sdp"
                     android:layout_marginTop="@dimen/_10ssp"
                     android:layout_marginBottom="@dimen/_10ssp"
@@ -204,13 +201,25 @@
 
                 <TextView
                     android:id="@+id/business_personal_account_name"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_15sdp"
+                    android:layout_marginEnd="@dimen/_10ssp"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="Jonathan Joestar"
+                    android:text="Jonathan Joestar  "
+                    android:layout_weight="1"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/_11sdp" />
+
+                <ImageView
+                    android:id="@+id/tickIcon"
+                    android:visibility="gone"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:src="@drawable/ic_custom_tick"
+                    app:tint="@color/primary_green" />
 
             </LinearLayout>
 
