--- a/app/src/main/res/layout/activity_customer_profile.xml
+++ b/app/src/main/res/layout/activity_customer_profile.xml
@@ -46,7 +46,7 @@
                 </LinearLayout>
 
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/customerDatailsLL"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -56,7 +56,7 @@
                         android:id="@+id/profileCredLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+                        android:layout_alignParentStart="true"
                         android:orientation="vertical"
                         android:paddingStart="@dimen/_21sdp"
                         android:weightSum="2">
@@ -120,23 +120,20 @@
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:id="@+id/profilePicCL"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginEnd="@dimen/_30ssp"
+                        android:layout_width="@dimen/_100sdp"
+                        android:layout_height="@dimen/_65sdp"
+                        android:layout_alignParentEnd="true"
                         android:visibility="visible">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/linearLayout"
                             android:layout_width="@dimen/_50sdp"
                             android:layout_height="@dimen/_50sdp"
-                            android:layout_alignParentRight="true"
                             android:background="@drawable/corecircle"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
-
 
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/userProfileCV"
@@ -149,7 +146,6 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent">
-
 
                                 <ImageView
                                     android:id="@+id/profileIV"
@@ -169,21 +165,92 @@
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_20sdp"
                                     android:visibility="gone" />
+
                             </androidx.cardview.widget.CardView>
-
-
                         </androidx.constraintlayout.widget.ConstraintLayout>
+
 
                         <ImageView
                             android:id="@+id/imgQRCode"
                             android:layout_width="@dimen/_23sdp"
                             android:layout_height="@dimen/_23sdp"
                             android:src="@drawable/ic_qr_code"
-                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
-                            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias=".8"
+                            app:layout_constraintVertical_bias="0.943"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
-                </LinearLayout>
+
+<!--                    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                        android:id="@+id/profilePicCL"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:layout_marginEnd="@dimen/_30ssp"-->
+<!--                        android:visibility="visible">-->
+
+<!--                        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--                            android:id="@+id/linearLayout"-->
+<!--                            android:layout_width="@dimen/_50sdp"-->
+<!--                            android:layout_height="@dimen/_50sdp"-->
+<!--                            android:layout_alignParentRight="true"-->
+<!--                            android:background="@drawable/corecircle"-->
+<!--                            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                            app:layout_constraintEnd_toEndOf="parent"-->
+<!--                            app:layout_constraintStart_toStartOf="parent"-->
+<!--                            app:layout_constraintTop_toTopOf="parent">-->
+
+
+<!--                            <androidx.cardview.widget.CardView-->
+<!--                                android:id="@+id/userProfileCV"-->
+<!--                                android:layout_width="@dimen/_48sdp"-->
+<!--                                android:layout_height="@dimen/_48sdp"-->
+<!--                                android:layout_alignParentRight="true"-->
+<!--                                android:layout_gravity="center"-->
+<!--                                app:cardCornerRadius="@dimen/_24sdp"-->
+<!--                                app:layout_constraintBottom_toBottomOf="parent"-->
+<!--                                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                                app:layout_constraintStart_toStartOf="parent"-->
+<!--                                app:layout_constraintTop_toTopOf="parent">-->
+
+
+<!--                                <ImageView-->
+<!--                                    android:id="@+id/profileIV"-->
+<!--                                    android:layout_width="match_parent"-->
+<!--                                    android:layout_height="match_parent"-->
+<!--                                    android:scaleType="fitXY"-->
+<!--                                    android:src="@drawable/ic_profile_male_user"-->
+<!--                                    android:visibility="visible" />-->
+
+<!--                                <TextView-->
+<!--                                    android:id="@+id/imageTextTV"-->
+<!--                                    android:layout_width="wrap_content"-->
+<!--                                    android:layout_height="wrap_content"-->
+<!--                                    android:layout_gravity="center"-->
+<!--                                    android:fontFamily="@font/opensans_bold"-->
+<!--                                    android:text="VT"-->
+<!--                                    android:textColor="@color/primary_black"-->
+<!--                                    android:textSize="@dimen/_20sdp"-->
+<!--                                    android:visibility="gone" />-->
+<!--                            </androidx.cardview.widget.CardView>-->
+
+
+<!--                        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+<!--                        <ImageView-->
+<!--                            android:id="@+id/imgQRCode"-->
+<!--                            android:layout_width="@dimen/_23sdp"-->
+<!--                            android:layout_height="@dimen/_23sdp"-->
+<!--                            android:src="@drawable/ic_qr_code"-->
+<!--                            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"-->
+<!--                            app:layout_constraintEnd_toEndOf="@+id/linearLayout" />-->
+
+<!--                    </androidx.constraintlayout.widget.ConstraintLayout>-->
+                </RelativeLayout>
 
             </LinearLayout>
 
