--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -88,6 +88,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:inputType="textVisiblePassword"
                         android:maxLength="100"
                         android:maxLines="1"
@@ -150,6 +151,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:inputType="textVisiblePassword"
                         android:maxLength="100"
                         android:maxLines="1"
@@ -215,7 +217,8 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:hint="@string/cityhint"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                        android:inputType="textVisiblePassword|textNoSuggestions"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -344,6 +347,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:inputType="number|textNoSuggestions"
                         android:maxLength="5"
                         android:maxLines="1"
@@ -740,7 +744,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
-                        android:inputType="number|textNoSuggestions"
+                        android:inputType="number|textVisiblePassword"
                         android:maxLength="5"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
