--- a/app/src/main/res/layout/activity_edit_phone.xml
+++ b/app/src/main/res/layout/activity_edit_phone.xml
@@ -18,7 +18,7 @@
             android:id="@+id/topLL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/saveEmailCV"
+            android:layout_above="@id/saveEmailCV"
             android:layout_alignParentTop="true"
             android:visibility="visible"
             android:orientation="vertical"
