--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -62,18 +62,18 @@
 
                     <EditText
                         android:id="@+id/searchET"
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_alignParentStart="true"
                         android:layout_marginStart="@dimen/_8sdp"
                         android:layout_marginEnd="@dimen/_5sdp"
-                        android:layout_toLeftOf="@id/filterIconIV"
                         android:layout_weight="1"
+                        android:autofillHints="emailAddress"
+                        android:inputType="textVisiblePassword"
                         android:background="@android:color/transparent"
                         android:cursorVisible="true"
                         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                         android:fontFamily="@font/opensans_regular"
-                        android:hint="@string/search_by_payout"
+                        android:hint="Payout ID"
                         android:imeOptions="actionDone"
                         android:maxLength="35"
                         android:maxLines="1"
@@ -83,8 +83,25 @@
                         android:textCursorDrawable="@drawable/cursor_color"
                         android:textSize="@dimen/_10ssp" />
 
+                    <View
+                        android:layout_width="@dimen/_1sdp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/_6sdp"
+                        android:layout_marginEnd="@dimen/_11sdp"
+                        android:layout_marginBottom="@dimen/_6sdp"
+                        android:background="@color/dark_color_bg" />
 
+                    <ImageView
+                        android:id="@+id/filterIconIV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_14sdp"
+                        android:contentDescription="@string/filter_button"
+                        android:src="@drawable/ic_filtericon" />
                 </LinearLayout>
+
+
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
