--- a/app/src/main/res/layout/activity_business_batch_payout_search.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_search.xml
@@ -126,10 +126,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_11sdp"
             android:layout_marginRight="@dimen/_21sdp"
-            android:fontFamily="@font/opensans_bold"
+            android:fontFamily="@font/opensans_regular"
             android:text="@string/cyn"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/_9ssp" />
+            android:textSize="@dimen/_11ssp" />
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
@@ -147,6 +147,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewPayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
