--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -41,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_13sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/add_a_signet_account"
                 android:textColor="@color/black"
