--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/et_bg_gray"
-    tools:context=".view.business.ReserveReleasesActivity"
-    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
+    android:orientation="vertical"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"
+    tools:context=".view.business.ReserveReleasesActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,6 +23,7 @@
             android:id="@+id/closeBtnIV"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -30,6 +31,7 @@
                 android:src="@drawable/ic_close" />
 
         </LinearLayout>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -56,8 +58,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:contentDescription="@string/search_by_reserve_id"
                     android:layout_marginStart="@dimen/_9sdp"
+                    android:contentDescription="@string/search_by_reserve_id"
                     android:src="@drawable/ic_search_icon" />
 
                 <RelativeLayout
@@ -73,9 +75,9 @@
                         android:background="@android:color/transparent"
                         android:cursorVisible="false"
                         android:hint="@string/search_by_reserve_id"
+                        android:inputType="text"
                         android:maxLines="1"
                         android:singleLine="true"
-                        android:inputType="text"
                         android:textColor="@color/primary_black"
                         android:textColorHint="@color/dark_grey"
                         android:textCursorDrawable="@drawable/cursor_color_text"
@@ -88,16 +90,16 @@
                         android:layout_marginEnd="@dimen/_11sdp"
                         android:layout_marginBottom="@dimen/_6sdp"
                         android:layout_toStartOf="@id/ivFilterIcon"
-                        android:background="@color/dark_color_bg" />
+                        android:background="@color/vlight_gray" />
 
                     <ImageView
                         android:id="@+id/ivFilterIcon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="@dimen/_14sdp"
                         android:contentDescription="@string/filter"
                         android:paddingTop="@dimen/_10sdp"
-                        android:layout_marginEnd="@dimen/_14sdp"
                         android:src="@drawable/ic_filtericon" />
                 </RelativeLayout>
             </LinearLayout>
@@ -124,9 +126,9 @@
                 android:id="@+id/rollingLL"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginTop="@dimen/_13sdp"
-                android:orientation="horizontal"
-                android:layout_gravity="center">
+                android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -146,36 +148,24 @@
                     android:src="@drawable/ic_chevron_down" />
 
             </LinearLayout>
+
             <View
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_2sdp"
+                android:layout_height="1dp"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_11sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@color/blue_light"/>
+                android:background="@color/vlight_gray" />
 
-            <androidx.cardview.widget.CardView
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rrTransListRV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_6sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                android:background="@color/white"
+                android:scrollbars="vertical">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="@dimen/_11sdp"
-                    android:layout_marginTop="@dimen/_8sdp"
-                    android:orientation="vertical">
+            </androidx.recyclerview.widget.RecyclerView>
 
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                    </androidx.recyclerview.widget.RecyclerView>
-
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
