--- a/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
+++ b/app/src/main/res/layout/activity_business_batch_payout_id_details.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/backLL"
+            android:id="@+id/payoytBackLL"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_21sdp"
@@ -48,8 +48,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="@dimen/_94sdp">
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -182,8 +181,14 @@
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
 
+                        <LinearLayout
+                            android:id="@+id/payoutRefIdLL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
                         <TextView
-                            android:id="@+id/sndnoTV"
+                            android:id="@+id/payoutRefIdTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
@@ -199,7 +204,7 @@
                             android:contentDescription="@string/reserve_id"
                             android:src="@drawable/ic_copy_active" />
                     </LinearLayout>
-
+                    </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -217,9 +222,14 @@
                             android:text="@string/to_token_account"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
-
+                        <LinearLayout
+                            android:id="@+id/payoutTokenNoLL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
                         <TextView
-                            android:id="@+id/tokenIdTV"
+                            android:id="@+id/payoutTokenIdTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/opensans_semibold"
@@ -228,12 +238,12 @@
                             android:textSize="@dimen/_11ssp" />
 
                         <ImageView
-                            android:id="@id/tokenIdTV"
                             android:layout_width="@dimen/_10sdp"
                             android:layout_height="@dimen/_11sdp"
                             android:layout_marginLeft="@dimen/_6sdp"
                             android:layout_marginTop="@dimen/_2sdp"
                             android:src="@drawable/ic_copy_active" />
+                    </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -243,7 +253,8 @@
                         android:orientation="horizontal"
                         android:paddingHorizontal="@dimen/_11sdp"
                         android:paddingTop="@dimen/_7sdp"
-                        android:paddingBottom="@dimen/_10sdp">
+                        android:paddingBottom="@dimen/_10sdp"
+                        android:visibility="gone">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -253,6 +264,13 @@
                             android:text="@string/reserve_id"
                             android:textColor="@color/xdark_gray"
                             android:textSize="@dimen/_11ssp" />
+                        <LinearLayout
+                            android:id="@+id/payoutReserveIdLL"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
 
                         <TextView
                             android:id="@+id/ReserveIdTV"
@@ -271,33 +289,36 @@
                             android:contentDescription="@string/reserve_id"
                             android:src="@drawable/ic_copy_active" />
                     </LinearLayout>
-
+                    </LinearLayout>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:layout_marginHorizontal="@dimen/_11sdp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_20sdp"
                     android:layout_marginTop="@dimen/_11sdp"
                     android:layout_weight="1"
+                    android:layout_marginStart="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/recent_transactions"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
 
                 <TextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_11sdp"
-                    android:layout_marginRight="@dimen/_21sdp"
+                    android:layout_marginRight="@dimen/_12sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:text="@string/cyn"
+                    android:gravity="right"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_9ssp" />
             </LinearLayout>
