--- a/app/src/main/res/layout/business_comapany_listitem.xml
+++ b/app/src/main/res/layout/business_comapany_listitem.xml
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/txv_comapny_name"
-            android:text="textt"
+            android:text=""
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/opensans_semibold"
