--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -28,23 +28,26 @@
             android:src="@color/light_gray"
             android:visibility="visible" />
 
-        <TextView
-            android:id="@+id/b_imageTextTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:textColor="@color/primary_black"
-            android:textSize="@dimen/_20sdp"
-            android:visibility="gone" />
+<!--        <TextView-->
+<!--            android:id="@+id/b_imageTextTV"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:fontFamily="@font/opensans_bold"-->
+<!--            android:textColor="@color/primary_black"-->
+<!--            android:textSize="@dimen/_20sdp"-->
+<!--            android:visibility="gone" />-->
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
-        android:text="TEST"
+        android:text=""
+        android:fontFamily="@font/opensans_semibold"
         android:layout_height="wrap_content"
+        android:textColor="@color/primary_black"
         android:padding="@dimen/_10sdp"
+        android:textSize="@dimen/_16sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
