--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -41,7 +41,10 @@
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
-        android:text="TEST"
+        android:text=""
+        android:fontFamily="@font/opensans_semibold"
+        android:textColor="@color/primary_black"
+        android:textSize="@dimen/_16sdp"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_5sdp"
@@ -51,16 +54,45 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
 
+
+    <LinearLayout
+        android:id="@+id/statusLL"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/title"
+        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="@dimen/_35sdp"
+        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"
+        android:layout_alignParentLeft="true"
+        android:layout_marginBottom="@dimen/_1sdp"
+        android:background="@drawable/txn_pending_bg"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/statusTV"
+            android:layout_width="@dimen/_68sdp"
+            android:layout_height="@dimen/_14sdp"
+            android:fontFamily="@font/opensans_bold"
+            android:text=""
+            android:gravity="center"
+            android:textColor="#FFA701"
+            android:textSize="@dimen/_7ssp" />
+
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/tickIcon"
         app:layout_constraintStart_toEndOf="@id/title"
         app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"
-        android:visibility="visible"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_custom_tick"
         app:tint="@color/primary_green" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
