"Company and Team Bugs fixes done"

--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -131,6 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_14ssp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -153,7 +154,6 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvTeam"
-                android:layout_marginTop="@dimen/_13sdp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
