--- a/app/src/main/res/layout/activity_edit_team_member.xml
+++ b/app/src/main/res/layout/activity_edit_team_member.xml
@@ -31,6 +31,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fillViewport="true"
         android:scrollbars="none">
 
         <LinearLayout
@@ -296,7 +297,6 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_regular"
                 android:text="*Please Note: New team members get full\nadministrator permission"
                 android:textColor="@color/xdark_gray"
@@ -308,6 +308,7 @@
                 android:layout_height="@dimen/_43sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_gravity="bottom"
                 app:cardBackgroundColor="@color/primary_color"
                 app:cardCornerRadius="@dimen/_22sdp">
 
