--- a/app/src/main/res/layout/activity_monthly_service_fee.xml
+++ b/app/src/main/res/layout/activity_monthly_service_fee.xml
@@ -21,7 +21,7 @@
             android:paddingLeft="@dimen/_22sdp">
 
             <LinearLayout
-                android:id="@+id/lycloseLL"
+                android:id="@+id/Msfeeclosell"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_marginTop="@dimen/_40sdp"
@@ -72,7 +72,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/MSFTV"
+                            android:id="@+id/MSFheaderTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -138,7 +138,6 @@
 
                             <TextView
                                 android:id="@+id/MSFstatusTV"
-
                                 android:layout_width="@dimen/_68sdp"
                                 android:layout_height="@dimen/_14sdp"
                                 android:layout_marginTop="@dimen/_6sdp"
@@ -212,6 +211,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <ImageView
+                                android:id="@+id/MSFeecopyIV"
                                 android:layout_width="@dimen/_11sdp"
                                 android:layout_height="@dimen/_11sdp"
                                 android:layout_gravity="center"
