Reserve Releases Changes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,7 @@
     <color name="orange">#FFA70F</color>
     <color name="dark_color_bg">#E5E5E5</color>
     <color name="active_green">#008A05</color>
+    <color name="active_black">#505050</color>
     <color name="under_review_blue">#1D86BE</color>
     <color name="retake_bg_grey">#707070</color>
     <color name="trans_black">#66000000</color>
