--- a/app/src/main/res/layout/activity_reserve_releases.xml
+++ b/app/src/main/res/layout/activity_reserve_releases.xml
@@ -75,6 +75,7 @@
                         android:background="@android:color/transparent"
                         android:cursorVisible="false"
                         android:hint="@string/search_by_reserve_id"
+                        android:fontFamily="@font/opensans_regular"
                         android:inputType="text"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -84,7 +85,7 @@
                         android:textSize="@dimen/_10ssp" />
 
                     <View
-                        android:layout_width="@dimen/_2sdp"
+                        android:layout_width="@dimen/_1sdp"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/_6sdp"
                         android:layout_marginEnd="@dimen/_11sdp"
@@ -106,68 +107,79 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
-    <androidx.cardview.widget.CardView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_11sdp"
-        android:layout_marginTop="@dimen/_14sdp"
-        android:layout_marginRight="@dimen/_11sdp"
-        android:layout_marginBottom="@dimen/_7sdp"
-        android:background="@color/white"
-        app:cardCornerRadius="@dimen/_10sdp">
-
+        android:layout_height="match_parent"
+        android:scrollbars="none">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/rollingLL"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_13sdp"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/rolling_releases"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_12ssp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:contentDescription="@string/reserve_releases"
-                    android:src="@drawable/ic_chevron_down" />
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_11sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:background="@color/vlight_gray" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rrTransListRV"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:layout_marginRight="@dimen/_11sdp"
+                android:layout_marginBottom="@dimen/_31sdp"
                 android:background="@color/white"
-                android:scrollbars="vertical">
+                app:cardCornerRadius="@dimen/_10sdp">
 
-            </androidx.recyclerview.widget.RecyclerView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
+                    <LinearLayout
+                        android:id="@+id/rollingLL"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/_13sdp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:text="@string/rolling_releases"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="@dimen/_5sdp"
+                            android:layout_marginTop="@dimen/_2sdp"
+                            android:contentDescription="@string/reserve_releases"
+                            android:src="@drawable/ic_chevron_down" />
+
+                    </LinearLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_marginStart="@dimen/_10sdp"
+                        android:layout_marginTop="@dimen/_11sdp"
+                        android:layout_marginEnd="@dimen/_10sdp"
+                        android:background="@color/vlight_gray" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rrTransListRV"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:scrollbars="none"
+                        android:nestedScrollingEnabled="false"
+                        android:background="@color/white"
+                        android:layout_marginBottom="@dimen/_20sdp">
+
+                    </androidx.recyclerview.widget.RecyclerView>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
