--- a/app/src/main/res/layout/rolling_details.xml
+++ b/app/src/main/res/layout/rolling_details.xml
@@ -25,27 +25,24 @@
         android:layout_alignParentRight="true"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:fontFamily="@font/opensans_semibold"
+        android:fontFamily="@font/opensans_bold"
         android:text="20,000.00"
         android:textColor="@color/xdark_gray"
         android:textSize="@dimen/_12ssp" />
 
     <TextView
         android:id="@+id/status_TV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/_67sdp"
+        android:layout_height="@dimen/_17sdp"
         android:layout_below="@+id/nameTv"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginTop="@dimen/_7sdp"
         android:background="@drawable/txn_completed_bg"
-        android:fontFamily="@font/opensans_semibold"
-        android:paddingStart="@dimen/_23sdp"
-        android:paddingTop="@dimen/_2sdp"
-        android:paddingEnd="@dimen/_23sdp"
-        android:paddingBottom="@dimen/_2sdp"
+        android:fontFamily="@font/opensans_bold"
+        android:gravity="center"
         android:text="Open"
         android:textColor="@color/xdark_gray"
-        android:textSize="@dimen/_9ssp" />
+        android:textSize="@dimen/_8ssp" />
 
     <TextView
         android:id="@+id/dateTime_TV"
